--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (390.132-2) UNRELEASED; urgency=medium
+
+  * Backport nv_ioremap_nocache changes from 440.64 to fix kernel module build
+    for Linux 5.6.
+
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 25 Apr 2020 21:05:06 +0200
+
 nvidia-graphics-drivers (390.132-1) stretch; urgency=medium
 
   * New upstream legacy branch release 390.132 (2019-11-08).
