--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-nvidia-graphics-drivers (390.132-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (390.132-1+git) UNRELEASED; urgency=medium
 
   * Backport nv_ioremap_nocache changes from 440.64 and nv_proc_ops_t and
     nv_timeval changes from 440.82 to fix kernel module build for Linux 5.6.
     (Closes: #956458)
+  * Fix #includes in conftest.sh to fix kernel module build for Linux 5.7,
+    thanks to Jiri Palecek.  (Closes: #960735)
 
  -- Andreas Beckmann <anbe@debian.org>  Sat, 25 Apr 2020 21:05:06 +0200
 
