--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-nvidia-graphics-drivers (440.82-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (440.82-2) unstable; urgency=medium
 
   * Fix #includes in conftest.sh to fix kernel module build for Linux 5.7,
     thanks to Jiri Palecek.  (Closes: #960735)
   * Switch to debhelper-compat (= 13).
 
- -- Andreas Beckmann <anbe@debian.org>  Wed, 20 May 2020 10:55:09 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 20 May 2020 17:22:58 +0200
 
 nvidia-graphics-drivers (440.82-1) unstable; urgency=medium
 
